[gd_scene load_steps=4 format=3 uid="uid://dtetxxysjhnv6"]

[ext_resource type="Script" path="res://addons/GodotTogether/src/scenes/GUI/MainMenu/MainMenu.gd" id="1_yt0t6"]
[ext_resource type="Texture2D" uid="uid://ca0d07y80h41v" path="res://addons/GodotTogether/src/img/play.svg" id="2_t8t1o"]
[ext_resource type="Script" path="res://addons/GodotTogether/src/scenes/GUI/MainMenu/settingsTab.gd" id="3_f3jt3"]

[node name="MainMenu" type="PopupPanel"]
title = "Godot Together"
initial_position = 5
size = Vector2i(1000, 500)
visible = true
borderless = false
min_size = Vector2i(1000, 500)
script = ExtResource("1_yt0t6")

[node name="tabs" type="TabContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 996.0
offset_bottom = 496.0

[node name="start" type="ScrollContainer" parent="tabs"]
layout_mode = 2

[node name="vbox" type="VBoxContainer" parent="tabs/start"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="tabs/start/vbox"]
layout_mode = 2
text = "Your username"

[node name="username" type="LineEdit" parent="tabs/start/vbox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cool person"
placeholder_text = "Username..."

[node name="HSeparator3" type="HSeparator" parent="tabs/start/vbox"]
layout_mode = 2

[node name="joinOrHost" type="Control" parent="tabs/start/vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="tabs" type="TabContainer" parent="tabs/start/vbox/joinOrHost"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="join" type="VBoxContainer" parent="tabs/start/vbox/joinOrHost/tabs"]
layout_mode = 2

[node name="Label5" type="Label" parent="tabs/start/vbox/joinOrHost/tabs/join"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Join a editing session"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="tabs/start/vbox/joinOrHost/tabs/join"]
layout_mode = 2
text = "Server IP and port:"

[node name="address" type="HBoxContainer" parent="tabs/start/vbox/joinOrHost/tabs/join"]
layout_mode = 2

[node name="ip" type="LineEdit" parent="tabs/start/vbox/joinOrHost/tabs/join/address"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Server IP address..."

[node name="Label" type="Label" parent="tabs/start/vbox/joinOrHost/tabs/join/address"]
layout_mode = 2
text = ":"

[node name="port" type="SpinBox" parent="tabs/start/vbox/joinOrHost/tabs/join/address"]
layout_mode = 2
min_value = 1024.0
max_value = 65535.0
value = 5017.0

[node name="Label6" type="Label" parent="tabs/start/vbox/joinOrHost/tabs/join"]
layout_mode = 2
text = "Password (if required): "

[node name="password" type="LineEdit" parent="tabs/start/vbox/joinOrHost/tabs/join"]
layout_mode = 2
placeholder_text = "Password..."
secret = true

[node name="btnJoin" type="Button" parent="tabs/start/vbox/joinOrHost/tabs/join"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/icon_normal_color = Color(0, 0.733333, 0, 1)
text = "Join"
icon = ExtResource("2_t8t1o")

[node name="host" type="VBoxContainer" parent="tabs/start/vbox/joinOrHost/tabs"]
visible = false
layout_mode = 2

[node name="Label8" type="Label" parent="tabs/start/vbox/joinOrHost/tabs/host"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Host a editing session"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="tabs/start/vbox/joinOrHost/tabs/host"]
layout_mode = 2
text = "Server configuration:"
horizontal_alignment = 1

[node name="smallConfig" type="HBoxContainer" parent="tabs/start/vbox/joinOrHost/tabs/host"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="tabs/start/vbox/joinOrHost/tabs/host/smallConfig"]
layout_mode = 2
text = "Target port"

[node name="port" type="SpinBox" parent="tabs/start/vbox/joinOrHost/tabs/host/smallConfig"]
layout_mode = 2
min_value = 1024.0
max_value = 65535.0
value = 5017.0

[node name="Label2" type="Label" parent="tabs/start/vbox/joinOrHost/tabs/host/smallConfig"]
layout_mode = 2
text = "Max people"

[node name="maxClients" type="SpinBox" parent="tabs/start/vbox/joinOrHost/tabs/host/smallConfig"]
layout_mode = 2
min_value = 1.0
value = 4.0

[node name="Label4" type="Label" parent="tabs/start/vbox/joinOrHost/tabs/host"]
layout_mode = 2
text = "Password:"

[node name="password" type="LineEdit" parent="tabs/start/vbox/joinOrHost/tabs/host"]
layout_mode = 2
placeholder_text = "Password..."
secret = true

[node name="btnHost" type="Button" parent="tabs/start/vbox/joinOrHost/tabs/host"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/icon_normal_color = Color(0, 0.733333, 0, 1)
text = "Start hosting"
icon = ExtResource("2_t8t1o")

[node name="cover" type="ColorRect" parent="tabs/start/vbox/joinOrHost"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.513726)

[node name="vbox" type="VBoxContainer" parent="tabs/start/vbox/joinOrHost/cover"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -20.0
offset_right = 49.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="txt" type="Label" parent="tabs/start/vbox/joinOrHost/cover/vbox"]
layout_mode = 2
size_flags_vertical = 7
text = "Cover text"
horizontal_alignment = 1

[node name="btnStop" type="Button" parent="tabs/start/vbox/joinOrHost/cover/vbox"]
layout_mode = 2
size_flags_vertical = 7
text = "End session"

[node name="warning" type="Label" parent="tabs/start/vbox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.690196, 0, 1)
text = "Only add people you really trust! This plugin may allow hackers to execute orbitrary code on your machine and gain full control.
Please back up your project before any work as some data may get lost corrupted."
horizontal_alignment = 1
autowrap_mode = 2

[node name="settings" type="ScrollContainer" parent="tabs"]
visible = false
layout_mode = 2

[node name="vbox" type="VBoxContainer" parent="tabs/settings"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_f3jt3")

[node name="Control3" type="Control" parent="tabs/settings/vbox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="update" type="HBoxContainer" parent="tabs/settings/vbox"]
visible = false
layout_mode = 2

[node name="btnCheck" type="LinkButton" parent="tabs/settings/vbox/update"]
layout_mode = 2
size_flags_horizontal = 3
text = "Check for updates"

[node name="current" type="Label" parent="tabs/settings/vbox/update"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.607843, 0.607843, 0.607843, 1)
text = "Current version: x.x.x"
horizontal_alignment = 1

[node name="Control" type="Control" parent="tabs/settings/vbox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="btnReload" type="Button" parent="tabs/settings/vbox"]
layout_mode = 2
text = "Reload"

[node name="btnReset" type="Button" parent="tabs/settings/vbox"]
layout_mode = 2
text = "Reset all settings"

[node name="Control2" type="Control" parent="tabs/settings/vbox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="server" type="VBoxContainer" parent="tabs/settings/vbox"]
layout_mode = 2

[node name="Label" type="Label" parent="tabs/settings/vbox/server"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Server configuration"

[node name="allowExt" type="CheckButton" parent="tabs/settings/vbox/server"]
layout_mode = 2
text = "Accept connections outside of your local network"
metadata/path = "server/allow_external_connections"

[node name="HSeparator2" type="HSeparator" parent="tabs/settings/vbox/server"]
layout_mode = 2

[node name="btnBlacklist" type="Button" parent="tabs/settings/vbox/server"]
layout_mode = 2
text = "VIew banned IP addresses"

[node name="HSeparator" type="HSeparator" parent="tabs/settings/vbox/server"]
layout_mode = 2

[node name="enableWhitelist" type="CheckButton" parent="tabs/settings/vbox/server"]
layout_mode = 2
text = "Accept only whitelisted connections"
metadata/path = "server/whitelist_enabled"

[node name="btnWhitelist" type="Button" parent="tabs/settings/vbox/server"]
layout_mode = 2
text = "VIew whitelisted IP addresses"

[node name="people" type="Control" parent="tabs"]
visible = false
layout_mode = 2

[node name="about" type="Control" parent="tabs"]
visible = false
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="tabs/about"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "This plugins allows editing a Godot project by multiple people at the same time within a local network.
Please note that it's still in progress and may harm your projects so consider making a backup before using this plugin.
The security also isn't guaranteed so only allow people who you really trust to join your editing sessions.

Made by Wolfyxon
Source code: [url]https://github.com/Wolfyxon/godot-together[/url]"

[connection signal="text_changed" from="tabs/start/vbox/username" to="." method="_on_username_text_changed"]
[connection signal="pressed" from="tabs/start/vbox/joinOrHost/tabs/join/btnJoin" to="." method="_on_btn_join_pressed"]
[connection signal="pressed" from="tabs/start/vbox/joinOrHost/tabs/host/btnHost" to="." method="_on_btn_host_pressed"]
[connection signal="pressed" from="tabs/start/vbox/joinOrHost/cover/vbox/btnStop" to="." method="_on_btn_stop_pressed"]
